Tracey reworking Todo- Hackathon

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+.app {
   text-align: center;
+  background-color: #864f8c; ;
+ }
+
+input {
+  padding: 4px;
+  margin-right: 8px;
+  color: blueviolet;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+ul {
+  /* Remove bullet point  */
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li {
+  margin: 12px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.delete-button {
+  font-size: 10px;
+  margin-left: 8px;
+
+  border: none;
+  border-radius: 4px;
+
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background-pink {
+  background-color: pink;
 }
